--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ user can interact with in their browser. The css for this file can be found sepa
   </head>
   <body>
     <div>
-      <h1>Helen Glass Prospective Student Survey</h1>
+      <h1>Prospective Student Survey</h1>
       <form>
         <div><small>* Denotes required field</small></div>
         <div class="form-control">
